--- a/project/static/styles.css
+++ b/project/static/styles.css
@@ -1,3 +1,11 @@
 body{
     background-color: #123456;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.auth__form{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 8px;
 }
