--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,16 @@
     <title>Entrar | Reborn Games</title>
 </head>
 <body>
-    Login
+    <form action="/" method="POST" class="auth__form">
+    {% csrf_token %}
+        <label for="username">Nome de usuário</label>
+        <input type="text" name="username"/>
+
+        <label for="password">Senha</label>
+        <input type="password" name="password"/>
+        <span>{{ mensagem }}</span>
+
+        <button type="submit">Entrar</button>
+    </form>
 </body>
 </html>
