--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,4 +1,4 @@
 {% load static %}
-<footer>
-    <h3>Desenvolvido por Arthur Lima Duarte</h3>
+<footer class="footer">
+    <h3>© Desenvolvido por Arthur Lima Duarte, projeto fictício sem fins comerciais</h3>
 </footer>
