--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -2,3 +2,4 @@
 <footer class="footer">
     <h3>© Desenvolvido por Arthur Lima Duarte, projeto fictício sem fins comerciais</h3>
 </footer>
+<script src="{% static 'js/home-scripts.js' %}"></script>
