--- a/project/static/css/global.css
+++ b/project/static/css/global.css
@@ -21,6 +21,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
