--- a/project/static/css/home-styles.css
+++ b/project/static/css/home-styles.css
@@ -22,6 +22,9 @@
 
 .navbar__profile {
     position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .navbar__profile-icon {
@@ -57,6 +60,8 @@
 /* === Carrossel === */
 .carousel__container {
     display: flex;
+    justify-content: center;
+    align-items: center;
     overflow-x: hidden;
     scroll-behavior: smooth;
     width: 100%;
@@ -67,14 +72,21 @@
 .carousel__slide {
     min-width: 100%;
     transition: transform 0.5s ease-in-out;
+    object-position: center;
 }
 
 .carousel__slide img {
     width: 100%;
     height: auto;
     display: block;
-    object-fit: scale-down;
     align-content: center;
+}
+
+.title{
+    margin: 2rem;
+    margin-bottom: 0;
+    font-size: 36px;
+    font-weight: bold;
 }
 
 /* === Grid de Games === */
@@ -83,6 +95,11 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1.5rem;
     padding: 2rem;
+}
+
+.game__card__link{
+    text-decoration: none;
+    color: #123456;
 }
 
 /* === Card de Game === */
