--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/home-styles.css' %}">
 <nav class="navbar__container">
-    <div class="navbar__logo">Rebase Games</div>
+    <a href="/game/" class="navbar__logo">Rebase Games</a>
     <div class="navbar__profile">
         <div class="navbar__links">
             <a href="{% url 'create-game' %}" class="navbar__link">Criar Game</a>
