Página para criar reviews e visualização de todas as reviews de um jogo

--- a/templates/game/game-view.html
+++ b/templates/game/game-view.html
@@ -50,6 +50,7 @@
         <button id="open__reviews__modal__btn" data-url="{% url 'review:list' game_pk=game.pk %}">
             Ver Avaliações
         </button>
+        <a href="reviews/criar" class="create__review__button">Criar Review</a>
     
         {# --- ESTRUTURA DA MODAL COM CORPO VAZIO --- #}
         <div id="reviews__modal" class="modal">
