--- a/project/static/css/game-view-styles.css
+++ b/project/static/css/game-view-styles.css
@@ -76,6 +76,23 @@
     color: #333;
 }
 
+.create__review__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(9, 146, 9);
+    color: #fff;
+    padding: 0.6rem 1.2rem;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: 500;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.create__review__button:hover {
+    background-color: rgb(0, 94, 0);
+}
+
 .product__actions {
     margin-top: 1.5rem;
     display: flex;
@@ -151,7 +168,7 @@
     position: relative;
 }
 
-.modal__close__btn{
+.modal__close__btn {
     margin: 4px 0 4px 0;
     font-size: 4rem;
 }
@@ -190,6 +207,13 @@
     font-weight: 600;
     color: #111;
     margin-bottom: 0.5rem;
+}
+
+.review__user {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
 }
 
 .review__stars {
