Model de usuários, autenticação, cadastros e relacionando Game e Review com esses novos usuários, além de mudanças estilizando tudo o que não havia sido estilizado

--- a/project/static/css/home-styles.css
+++ b/project/static/css/home-styles.css
@@ -9,6 +9,7 @@
 }
 
 .navbar__logo {
+    font-family: "Sixtyfour Convergence", sans-serif;
     font-size: 1.6rem;
     color: #fff;
     text-decoration: none;
