--- a/templates/game/delete_game.html
+++ b/templates/game/delete_game.html
@@ -1,18 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deletar</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <link rel="stylesheet" href="{% static 'css/game-delete-styles.css' %}" />
+    <title>Deletar Jogo</title>
 </head>
 
 <body>
-    <form action="/game/deletar/{{ game.id }}/" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <button type="submit">Deletar</button>
-        <a href="javascript:history.back()">Cancelar</a>
-    </form>
+    <main class="delete__container">
+        <h1 class="delete__title">Confirmar exclusão</h1>
+        <form action="/game/deletar/{{ game.id }}/" method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn btn--danger">Deletar</button>
+            <a href="javascript:history.back()" class="btn btn--cancel">Cancelar</a>
+        </form>
+    </main>
 </body>
 
 </html>
